--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -6,120 +6,12 @@ jobs:
   init:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: 'go.mod'
-      - name: Display Go version
-        run: go version
-      - name: Write KUBECONFIG to file
-        env:
-          GARDENER_KUBECONFIG: ${{ secrets.GARDENER_KUBECONFIG }}
-        run: |
-          echo "$GARDENER_KUBECONFIG" > kubeconfig-garden.yaml
-      - name: Write e2e config file
-        env:
-          OIDC_CLIENT_ID: ${{ vars.OIDC_CLIENT_ID }}
-          OIDC_ISSUER_URL: ${{ vars.OIDC_ISSUER_URL }}
-        run: |
-          cat <<EOF > e2e-config.yaml
-          gardenKubeconfig: kubeconfig-garden.yaml
-          shootPrefix: pp
-          kcpNamespace: kcp-system
-          gardenNamespace: garden-spm-test01
-          skrNamespace: default
-          subscriptions:
-            - name: my-aws-secret
-              provider: aws
-              isDefault: true
-            - name: svc-btp-kyma-phoenix-dev
-              provider: azure
-              isDefault: true
-            - name: gardener-sc-learn
-              provider: gcp
-              isDefault: true
-          networkOwner: gardener
-          oidcClientId: $OIDC_CLIENT_ID
-          oidcIssuerUrl: $OIDC_ISSUER_URL
-          administrators:
-            - vladimir.andjelkoski@sap.com
-            - dl_623b719a6a0d2d029907bee0@global.corp.sap
-          downloadGardenSecrets:
-            cm-e2e-default-aws:
-              AWS_ACCESS_KEY_ID: accessKeyID
-              AWS_SECRET_ACCESS_KEY: secretAccessKey
-            cm-e2e-peering-aws:
-              AWS_PEERING_ACCESS_KEY_ID: accessKeyID
-              AWS_PEERING_SECRET_ACCESS_KEY: secretAccessKey
-            cm-e2e-default-gcp:
-              "gcp-default.json": serviceaccount.json
-            cm-e2e-peering-gcp:
-              "gcp-peering.json": serviceaccount.json
-            svc-btp-kyma-phoenix-dev:
-              AZURE_CLIENT_ID: clientID
-              AZURE_CLIENT_SECRET: clientSecret
-              AZURE_PEERING_CLIENT_ID: clientID
-              AZURE_PEERING_CLIENT_SECRET: clientSecret
-                      
-          EOF
-      - name: Display e2e config file
-        run: cat e2e-config.yaml
-      - name: Create tmp directory
-        run: mkdir ./tmp
-      - name: List directory
-        run: ls -la
-      - name: Download credentials
-        run:  go run ./e2e/cmd credentials download
-      - name: List tmp directory
-        run: ls -la ./tmp
-      - name: Download setup-envtest
-        run: make envtest
-      - name: Get ENVTEST_K8S_VERSION from Makefile
-        run: |
-          ENVTEST_K8S_VERSION=$(grep "ENVTEST_K8S_VERSION = " Makefile | awk -F '[[:space:]]*=[[:space:]]*' '{print $2}')
-          echo "ENVTEST_K8S_VERSION is $ENVTEST_K8S_VERSION"
-          echo "ENVTEST_K8S_VERSION=$ENVTEST_K8S_VERSION" >> $GITHUB_ENV
-      - name: Setup envtest
-        run: |
-          ./bin/setup-envtest use $ENVTEST_K8S_VERSION --bin-dir $PWD/bin -p path
-      - name: Run envtest
-        run: |
-          go run ./e2e/cmd envtest run -v $ENVTEST_K8S_VERSION -o ./tmp/kubeconfig-kcp.yaml > ./tmp/envtest.log 2>&1 &
-          ENVTEST_PID=$!
-          echo "ENVTEST_PID=$ENVTEST_PID" >> "$GITHUB_ENV"
-      - name: Wait for K8S to be ready
-        run: |
-          sleep 60
-      - name: List tmp directory after K8S start
-        run: ls -la ./tmp
-      - name: Run sim
-        env:
-          KUBECONFIG: ./tmp/kubeconfig-kcp.yaml
-        run: |
-          go run ./e2e/cmd sim run  > ./tmp/sim.log 2>&1 &
-          SIM_PID=$!
-          echo "SIM_PID=$SIM_PID" >> "$GITHUB_ENV"
-      - name: Wait for sim to be ready
-        run: |
-          sleep 30
+      - name: Initialize E2E environment
+        uses: ./.github/actions/e2e-init
+        id: e2e-init
       - name: run e2e tests
         run: echo "run e2e tests"
-      - name: Kill sim
+      - name: Destroy E2E environment
         if: always()
-        run: |
-          echo "Killing sim with PID $SIM_PID"
-          kill $SIM_PID
-      - name: Kill envtest
-        if: always()
-        run: |
-          echo "Killing envtest with PID $ENVTEST_PID"
-          kill $ENVTEST_PID
-      - name: Upload logs
-        uses: actions/upload-artifact@v4
-        with:
-          name: logs
-          path: |
-            tmp/envtest.log
-            tmp/sim.log
+        uses: ./.github/actions/e2e-destroy
+        id: e2e-destroy
