--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -6,6 +6,8 @@ jobs:
   init:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Initialize E2E environment
         uses: ./.github/actions/e2e-init
         id: e2e-init
