--- a/.github/actions/e2e-init/action.yaml
+++ b/.github/actions/e2e-init/action.yaml
@@ -8,13 +8,14 @@ runs:
       with:
         go-version-file: 'go.mod'
     - name: Display Go version
+      shell: bash
       run: go version
     - name: Write KUBECONFIG to file
-      env:
-        GARDENER_KUBECONFIG: ${{ secrets.GARDENER_KUBECONFIG }}
+      shell: bash
       run: |
         echo "$GARDENER_KUBECONFIG" > kubeconfig-garden.yaml
     - name: Write e2e config file
+      shell: bash
       env:
         OIDC_CLIENT_ID: ${{ vars.OIDC_CLIENT_ID }}
         OIDC_ISSUER_URL: ${{ vars.OIDC_ISSUER_URL }}
@@ -60,26 +61,35 @@ runs:
 
         EOF
     - name: Display e2e config file
+      shell: bash
       run: cat e2e-config.yaml
     - name: Create tmp directory
+      shell: bash
       run: mkdir ./tmp
     - name: List directory
+      shell: bash
       run: ls -la
     - name: Download credentials
+      shell: bash
       run: go run ./e2e/cmd credentials download
     - name: List tmp directory
+      shell: bash
       run: ls -la ./tmp
     - name: Download setup-envtest
+      shell: bash
       run: make envtest
     - name: Get ENVTEST_K8S_VERSION from Makefile
+      shell: bash
       run: |
         ENVTEST_K8S_VERSION=$(grep "ENVTEST_K8S_VERSION = " Makefile | awk -F '[[:space:]]*=[[:space:]]*' '{print $2}')
         echo "ENVTEST_K8S_VERSION is $ENVTEST_K8S_VERSION"
         echo "ENVTEST_K8S_VERSION=$ENVTEST_K8S_VERSION" >> $GITHUB_ENV
     - name: Setup envtest
+      shell: bash
       run: |
         ./bin/setup-envtest use $ENVTEST_K8S_VERSION --bin-dir $PWD/bin -p path
     - name: Run envtest
+      shell: bash
       run: |
         go run ./e2e/cmd envtest run -v $ENVTEST_K8S_VERSION -o ./tmp/kubeconfig-kcp.yaml > ./tmp/envtest.log 2>&1 &
         ENVTEST_PID=$!
@@ -87,8 +97,10 @@ runs:
         echo "Waiting for envtest to start K8S cluster"
         sleep 30
     - name: List tmp directory after K8S start
+      shell: bash
       run: ls -la ./tmp
     - name: Run sim
+      shell: bash
       env:
         KUBECONFIG: ./tmp/kubeconfig-kcp.yaml
       run: |
@@ -98,6 +110,7 @@ runs:
         echo "Waiting for sim to start"
         sleep 30
     - name: Run Cloud Manager
+      shell: bash
       env:
         KUBECONFIG: ./tmp/kubeconfig-kcp.yaml
         GCP_VPC_PEERING_KEY_PATH: ./tmp/gcp-peering.json
