--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   pull_request:
 jobs:
-  init:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
