--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -1,7 +1,14 @@
 name: E2E tests
 on:
   workflow_dispatch:
-  pull_request:
+    inputs:
+      provider:
+        type: choice
+        required: true
+        options:
+          - aws
+          - gcp
+          - azure
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,8 +22,15 @@ jobs:
           GARDENER_KUBECONFIG: ${{ secrets.GARDENER_KUBECONFIG }}
           OIDC_CLIENT_ID: ${{ vars.OIDC_CLIENT_ID }}
           OIDC_ISSUER_URL: ${{ vars.OIDC_ISSUER_URL }}
+      - name: Create shared instance
+        run: |
+          e2e/cmd instance create -a shared-${{ inputs.provider }} -p ${{ inputs.provider }} -w
       - name: run e2e tests
         run: echo "run e2e tests"
+      - name: Delete shared instance
+        if: always()
+        run: |
+          e2e/cmd instance delete -a shared-${{ inputs.provider }} -w
       - name: Destroy E2E environment
         if: always()
         uses: ./.github/actions/e2e-destroy
