--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -15,18 +15,20 @@ jobs:
     strategy:
       matrix:
         include:
-          - nukeBackupsGcp: "false"
+          - name: Build & Test
+            nukeBackupsGcp: "false"
             nukeBackupsAws: "false"
             nukeBackupsAzure: "false"
             nfs41Gcp: "false"
             vpcPeeringSync: "false"
-            name: Build & Test
-          - nukeBackupsGcp: "true"
+            ipRangeRefactored: "false"
+          - name: Build & Test (Nuke Backups, NFSv4.1, Peering Sync, Gcp IP Range v3)
+            nukeBackupsGcp: "true"
             nukeBackupsAws: "true"
             nukeBackupsAzure: "true"
             nfs41Gcp: "true"
             vpcPeeringSync: "true"
-            name: Build & Test (Nuke Backups, NFSv4.1, Peering Sync)
+            ipRangeRefactored: "true"
     runs-on: ubuntu-latest
     name: ${{ matrix.name }}
     steps:
@@ -45,6 +47,7 @@ jobs:
           FF_NUKE_BACKUPS_AZURE: ${{ matrix.nukeBackupsAzure }}
           FF_NFS41_GCP: ${{ matrix.nfs41Gcp }}
           FF_VPC_PEERING_SYNC: ${{ matrix.vpcPeeringSync }}
+          FF_IP_RANGE_REFACTORED: ${{ matrix.ipRangeRefactored }}
         run: |
           ./config/sync.sh
           go mod tidy
