--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -26,6 +26,8 @@ jobs:
           OIDC_CLIENT_ID: ${{ vars.OIDC_CLIENT_ID }}
           OIDC_ISSUER_URL: ${{ vars.OIDC_ISSUER_URL }}
       - name: Create shared instance
+        env:
+          KUBECONFIG: ./tmp/kubeconfig-kcp.yaml
         run: |
           PROVIDER=${{ inputs.provider }}
           PROVIDER=${PROVIDER:-"azure"}
@@ -34,6 +36,8 @@ jobs:
         run: echo "run e2e tests"
       - name: Delete shared instance
         if: always()
+        env:
+          KUBECONFIG: ./tmp/kubeconfig-kcp.yaml
         run: |
           PROVIDER=${{ inputs.provider }}
           PROVIDER=${PROVIDER:-"azure"}
