--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           PROVIDER=${{ inputs.provider }}
           PROVIDER=${PROVIDER:-"azure"}
-          go run ./e2e/cmd instance create -a shared-$PROVIDER -p $PROVIDER -w
+          go run ./e2e/cmd instance create -a shared-$PROVIDER -p $PROVIDER -t 30m -w
       - name: run e2e tests
         run: RUN_E2E_TESTS=1 PROJECTROOT=$GITHUB_WORKSPACE go test -timeout 0 -v -godog.tags "@skr && @azure" ./e2e/tests/skr/azure/...
       - name: Delete shared instance
@@ -41,7 +41,7 @@ jobs:
         run: |
           PROVIDER=${{ inputs.provider }}
           PROVIDER=${PROVIDER:-"azure"}
-          go run ./e2e/cmd instance delete -a shared-$PROVIDER -w
+          go run ./e2e/cmd instance delete -a shared-$PROVIDER -t 30m -w
       - name: Destroy E2E environment
         if: always()
         uses: ./.github/actions/e2e-destroy
