--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -45,7 +45,7 @@ jobs:
           go run ./e2e/cmd instance credentials dump -a shared-$PROVIDER > ./tmp/kubeconfig-shared-$PROVIDER.yaml
       - name: run e2e tests
         env:
-          KUBECONFIG: $PWD/tmp/kubeconfig-kcp.yaml
+          KUBECONFIG: ${{ github.workspace }}/tmp/kubeconfig-kcp.yaml
         run: |
           echo $KUBECONFIG
           ls -la ./tmp
