--- a/pkg/feature/ff_ga.yaml
+++ b/pkg/feature/ff_ga.yaml
@@ -59,3 +59,10 @@ nfs41Gcp:
     disabled: false
   defaultRule:
     variation: disabled
+
+gcpNfsInstanceV2:
+  variations:
+    enabled: true
+    disabled: false
+  defaultRule:
+    variation: disabled
