--- a/pkg/feature/ff_edge.yaml
+++ b/pkg/feature/ff_edge.yaml
@@ -32,3 +32,10 @@ nfs41Gcp:
     disabled: false
   defaultRule:
     variation: enabled
+
+gcpNfsInstanceV2:
+  variations:
+    enabled: true
+    disabled: false
+  defaultRule:
+    variation: disabled
