--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -22,6 +22,7 @@ jobs:
             nfs41Gcp: "false"
             vpcPeeringSync: "false"
             ipRangeRefactored: "false"
+            gcpNfsInstanceV2: "false"
           - name: Build & Test (Nuke Backups, NFSv4.1, Peering Sync, Gcp IP Range v3)
             nukeBackupsGcp: "true"
             nukeBackupsAws: "true"
@@ -29,6 +30,7 @@ jobs:
             nfs41Gcp: "true"
             vpcPeeringSync: "true"
             ipRangeRefactored: "true"
+            gcpNfsInstanceV2: "true"
     runs-on: ubuntu-latest
     name: ${{ matrix.name }}
     steps:
@@ -48,6 +50,7 @@ jobs:
           FF_NFS41_GCP: ${{ matrix.nfs41Gcp }}
           FF_VPC_PEERING_SYNC: ${{ matrix.vpcPeeringSync }}
           FF_IP_RANGE_REFACTORED: ${{ matrix.ipRangeRefactored }}
+          FF_GCP_NFS_INSTANCE_V2: ${{ matrix.gcpNfsInstanceV2 }}
         run: |
           ./config/sync.sh
           go mod tidy
