--- a/pkg/feature/ff_edge.yaml
+++ b/pkg/feature/ff_edge.yaml
@@ -26,6 +26,13 @@ vpcPeeringSync:
   defaultRule:
     variation: enabled
 
+ipRangeV2:
+  variations:
+    enabled: true
+    disabled: false
+  defaultRule:
+    variation: disabled
+
 nfs41Gcp:
   variations:
     enabled: true
