refactor: rename (again) gcp iprange ff

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -21,14 +21,14 @@ jobs:
             nukeBackupsAzure: "false"
             nfs41Gcp: "false"
             vpcPeeringSync: "false"
-            ipRangeV2: "false"
+            gcpIpRangeV3: "false"
           - name: Build & Test (Nuke Backups, NFSv4.1, Peering Sync, Gcp IP Range v3)
             nukeBackupsGcp: "true"
             nukeBackupsAws: "true"
             nukeBackupsAzure: "true"
             nfs41Gcp: "true"
             vpcPeeringSync: "true"
-            ipRangeV2: "true"
+            gcpIpRangeV3: "true"
     runs-on: ubuntu-latest
     name: ${{ matrix.name }}
     steps:
@@ -47,7 +47,7 @@ jobs:
           FF_NUKE_BACKUPS_AZURE: ${{ matrix.nukeBackupsAzure }}
           FF_NFS41_GCP: ${{ matrix.nfs41Gcp }}
           FF_VPC_PEERING_SYNC: ${{ matrix.vpcPeeringSync }}
-          FF_IP_RANGE_V2: ${{ matrix.ipRangeV2 }}
+          FF_GCP_IP_RANGE_V3: ${{ matrix.gcpIpRangeV3 }}
         run: |
           ./config/sync.sh
           go mod tidy
