refactor: add v2 implementation of GCP NfsInstance (#1632)

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -21,6 +21,7 @@ jobs:
             nukeBackupsAzure: "false"
             nfs41Gcp: "false"
             vpcPeeringSync: "false"
+            gcpNfsInstanceV2: "false"
             gcpIpRangeV3: "false"
           - name: Build & Test (Nuke Backups, NFSv4.1, Peering Sync, Gcp IP Range v3)
             nukeBackupsGcp: "true"
@@ -28,6 +29,7 @@ jobs:
             nukeBackupsAzure: "true"
             nfs41Gcp: "true"
             vpcPeeringSync: "true"
+            gcpNfsInstanceV2: "true"
             gcpIpRangeV3: "true"
     runs-on: ubuntu-latest
     name: ${{ matrix.name }}
@@ -47,6 +49,7 @@ jobs:
           FF_NUKE_BACKUPS_AZURE: ${{ matrix.nukeBackupsAzure }}
           FF_NFS41_GCP: ${{ matrix.nfs41Gcp }}
           FF_VPC_PEERING_SYNC: ${{ matrix.vpcPeeringSync }}
+          FF_GCP_NFS_INSTANCE_V2: ${{ matrix.gcpNfsInstanceV2 }}
           FF_GCP_IP_RANGE_V3: ${{ matrix.gcpIpRangeV3 }}
         run: |
           ./config/sync.sh
