fix: resolve AWS e2e test failures (role config, restore expectations, timeouts) (#12)
* fix: add missing AWS_ROLE_NAME environment variables for e2e tests

* fix: update AWS NFS restore test to accept timestamped subdirectory

* test: increase deletion timeouts in e2e sim from 1min to 3min

* move values of aws roles to github environment variables

* set role name variables to required

* fix env vars for e2e tests

---------

Co-authored-by: Vanja Radic <vanja.radic02@sap.com>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -21,6 +21,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      AWS_ROLE_NAME: ${{ vars.AWS_ROLE_NAME }}
+      AWS_PEERING_ROLE_NAME: ${{ vars.AWS_PEERING_ROLE_NAME }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
