chore: Phase 1: Create Feature Flag

--- a/pkg/feature/ff_edge.yaml
+++ b/pkg/feature/ff_edge.yaml
@@ -46,3 +46,10 @@ gcpNfsInstanceV2:
     disabled: false
   defaultRule:
     variation: disabled
+
+gcpBackupV2:
+  variations:
+    enabled: true
+    disabled: false
+  defaultRule:
+    variation: disabled
